fix: show pin labels and route tags on mobile instead of hiding them

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -119,7 +119,8 @@
   }
 
   @media (max-width: $breakpoint-mobile) {
-    display: none;
+    font-size: 9px;
+    padding: 2px 6px;
   }
 }
 
@@ -151,7 +152,8 @@
   }
 
   @media (max-width: $breakpoint-mobile) {
-    display: none;
+    font-size: 9px;
+    padding: 3px 7px;
   }
 }
 
